<resources>
    <string name="app_name">Just Weather</string>
    <string name="realfeel">RealFeel</string>
    <string name="more">more</string>
    <string name="new_moon">New Moon</string>
    <string name="Waxing_Crescent">Waxing Crescent</string>
    <string name="First_Quarter">First Quarter</string>
    <string name="Full_Moon">Full Moon</string>
    <string name="Waning_Gibbous">Waning Gibbous</string>
    <string name="Last_Quarter">Last Quarter</string>
    <string name="Waning_Crescent">Waning Crescent</string>
    <string name="City">City</string>
    <string name="enter_the_city">Enter the city\n</string>
    <string name="location_disabled">Location disabled</string>
    <string name="km_h">km/h</string>
    <string name="m_s">m/s</string>
    <string name="mm">mm</string>
    <string name="celcius" translatable="false">°</string>
    <string name="percent" translatable="false">%</string>
    <string name="permission_alarm">We need location permission to continue</string>
    <string name="network_error">Network error</string>
    <string name="backbtn" translatable="false">backBtn</string>
    <string name="uv_index">UV index:</string>
    <string name="update_current_location">Update current location</string>
    <string name="locations_updated">Locations Updated</string>
    <string name="city_not_found">location not found</string>
    <string name="Connection_problem">Connection problem</string>
    <string name="mbar">" mBar"</string>
    <string name="updated">Updated</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="Precipations">Precipitation</string>
    <string name="humidity">Humidity</string>
    <string name="wind">Wind</string>
    <string name="visibility">Visibility</string>
    <string name="t_max">t max</string>
    <string name="t_min">t min</string>
    <string name="sunrise">Sunrise</string>
    <string name="moonset">Moonset</string>
    <string name="moonrise">Moonrise</string>
    <string name="sunset">Sunset</string>
    <string name="my_location">My location</string>
    <string name="Click_on_refresh">Click on refresh</string>
    <string name="refreshbtn" translatable="false">refreshBtn</string>
    <string name="refresh">Refresh</string>
    <string name="made_by_javacat" translatable="false">made by JavaCat</string>
    <string name="powered_by_weatherapi_com" translatable="false">powered by weatherapi.com</string>
    <string name="locatedmarker" translatable="false">locatedMarker</string>
    <string name="conditionimage" translatable="false">conditionImage</string>
    <string name="mmHg">mmHg</string>
    <string name="update">Update</string>
    <string name="choose_e_mail_app">Choose e-mail app</string>
    <string name="information">Information</string>
</resources>